# First

control_stack/pid_controller/: CMakeLists.txt  README.md  package.xml
control_stack/pid_controller/config/: pid.conf
control_stack/pid_controller/include/pid_controller/: pid_control.h
control_stack/pid_controller/msg/: PID.msg  Setpoint.msg
control_stack/pid_controller/src/: pid_control.cpp  pid_controller.cpp
control_stack/pid_controller/ui/: pid_control.ui
control_stack/thruster_controller/: CMakeLists.txt  package.xml
control_stack/thruster_controller/config/: README.md  reverse.conf
control_stack/thruster_controller/include/thruster_controller/: thruster_control.h
control_stack/thruster_controller/msg/: ThrusterSpeeds.msg
control_stack/thruster_controller/src/: thruster_control.cpp  thruster_controller.cpp
control_stack/thruster_controller/ui/: thruster_control.ui
control_stack/tiburon_commander/: CMakeLists.txt  README.md  package.xml
control_stack/tiburon_commander/config/: hammerhead.conf
control_stack/tiburon_commander/include/tiburon_commander/: commander_window.h  output_widget.h  process_widget.h
control_stack/tiburon_commander/src/: commander_window.cpp  output_widget.cpp  process_widget.cpp  tiburon_commander.cpp
control_stack/tiburon_commander/ui/: commander_window.ui  output_widget.ui  process_widget.ui
software_induction22-main/: README.md
software_induction22-main/line_follower/: CMakeLists.txt  package.xml
software_induction22-main/line_follower/config/: joint_names_line_follower.yaml
software_induction22-main/line_follower/launch/: bind.launch  display.launch  gazebo.launch
software_induction22-main/line_follower/meshes/: base_link.STL  camera_link.STL  caster_link.STL  caster_link_1.STL  left_link.STL  right_link.STL
software_induction22-main/line_follower/scripts/: camera_feed.py
software_induction22-main/line_follower/urdf/: line_follower.urdf  linefollower.gazebo  opencv_code.py
software_induction22-main/line_follower_arena/: CMakeLists.txt  package.xml
software_induction22-main/line_follower_arena/launch/: line_world.launch
software_induction22-main/line_follower_arena/models/line_track/: model.config  model.sdf
software_induction22-main/line_follower_arena/models/line_track/materials/scripts/: line_track.material
software_induction22-main/line_follower_arena/world/: line_world.world
