<?xml version="1.0"?>
<package format="2">
  <name>thruster_controller</name>
  <version>0.0.0</version>
  <description>Thruster Control UI</description>
  <maintainer email="rohitsuri.nitr@gmail.com">Rohit Suri</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>qt_build</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>message_runtime</depend>
  <depend>hammerhead</depend>
</package>
