<?xml version="1.0"?>
<package>
  <name>tiburon_commander</name>
  <version>0.0.1</version>
  <description>Tiburon Commander UI</description>

  <maintainer email="rohitsuri.nitr@gmail.com">Rohit Suri</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
